implement speed score calculation in Score Calculator